tests/errors/erc_global_net_error.nm
component Foo {
    prefix = "U";
    footprint = "foo";

    pin VCC: power_out = 1;
}

global net VCC;

abstract component Main {
    Foo;
    Foo;
}